// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFlexGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive testClass1 testClass2"
  data-test-subj="test subject string"
>
  <h2>
    My Child
  </h2>
</div>
`;

exports[`OuiFlexGroup props alignItems baseline is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsBaseline ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props alignItems center is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props alignItems flexEnd is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsFlexEnd ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props alignItems flexStart is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--alignItemsFlexStart ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props alignItems stretch is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props component div is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props component span is rendered 1`] = `
<span
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props direction column is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionColumn ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props direction columnReverse is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionColumnReverse ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props direction row is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props direction rowReverse is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRowReverse ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize l is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize m is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize none is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize s is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize xl is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterExtraLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props gutterSize xs is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent center is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent flexEnd is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentFlexEnd ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent flexStart is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent spaceAround is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceAround ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent spaceBetween is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceBetween ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props justifyContent spaceEvenly is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--justifyContentSpaceEvenly ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props responsive false is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow"
/>
`;

exports[`OuiFlexGroup props responsive true is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props wrap false is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
/>
`;

exports[`OuiFlexGroup props wrap true is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap"
/>
`;
